--- a/INDEX.html
+++ b/INDEX.html
@@ -15,10 +15,10 @@
             <img src="logo.png" class="logo" width="10%" height="auto">
             <ul id="sidemenu">
                 <li><a href="#header" style="color: white;"><b>Home</b></a></li>
-                <li><a href="#about"><b>About</b></a></li>
-                <li><a href="#services"><b>Services</b></a></li>
-                <li><a href="#portfolio"><b>Portfolio</b></a></li>
-                <li><a href="#contact"><b>contact</b></a></li>
+                <li><a href="#about" style="color: white;"><b>About</b></a></li>
+                <li><a href="#services" style="color: white;"><b>Services</b></a></li>
+                <li><a href="#portfolio" style="color: white;"><b>Portfolio</b></a></li>
+                <li><a href="#contact" style="color: white;"><b>contact</b></a></li>
                 <i class="fas fa-times" onclick="closemenu()"></i>
 
             </ul>
